Improved responsivity, fixed margin collapsing, refactor css for similar elements, check button fixed.

--- a/css/container.css
+++ b/css/container.css
@@ -1,14 +1,17 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 800px;
-    min-width: 500px;
-    margin: 30px auto;
-    padding: 0 20px;
+    max-width: 950px;
+    margin: 0 auto;
+    padding: 20px 20px;
 }
 
 .header {
-    font-size: 24px;
+    font-size: 36px;
     font-weight: bolder;
-    padding: 20px 0;
+    margin: 18px 0;
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
 }
