--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@ html {
 }
 
 .body {
-    display: flex;
-    flex-direction: column;
     word-break: break-word;
     font-family: 'Lato', sans-serif;
     background-color: rgba(128, 128, 128, 0.25);
